Thu Oct 18 14:22:10 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreestore.c (gtk_tree_store_remove): fix small bug
	reported by (Oleg Maiboroda), #62600

2001-10-18  Michael Meeks  <michael@ximian.com>

	* gtk/gtkentry.c (gtk_entry_set_property),
	(gtk_entry_get_property): impl 'text'
	(gtk_entry_class_init): add the 'text' prop.
	(gtk_entry_insert_text): notify 'text' changed.
	(gtk_entry_delete_text): ditto.

2001-10-17  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkdnd.c, gtk/gtkclipboard.c, gdk/x11/gdkmain-x11.c:
	Documentation updates.

Wed Oct 17 15:17:20 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_real_insert_text): Fix mistake
	in truncating length of text to MAX_SIZE. (Found by 
	Padraig O'Briain, #62055)

Tue Oct 16 17:04:44 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c: Rename ACTIVATE_MNEMONIC enum to
	MNEMONIC_ACTIVATE; signal was changed a long time
	ago.

	* gdk/x11/gdkim-x11.c (_gdk_x11_initialize_locale): 
	Fix wrong return statement. (Reported by HideToshi
	Tajima and others.)

	* gtk/gtklabel.h (struct _GtkLabelClass): Remove
	left over select_all vfunc.

Tue Oct 16 15:50:03 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_translate_coordinates): Add
	a utility function to translate coordinates relative to
	one widget's allocation to coordinates relative to another
	widget's allocation.

	* gtk/gtkradiobutton.c: Add a special ->focus() implementation
	that:
	 - only accepts external focus if there is no active
   	   member of the group or the button is active.
	 - makes arrow keys move the active button as well
	   as the focus
	 - make tab tab out directly.
	This makes a radio button group act as a single focus location.
	(#53577).
	
	* gtk/gtkcontainer.c (gtk_container_focus): Remove prefiltering -
	it was only a small optimization that didn't matter and made
	things more complicated.

	* gtk/gtkcontainer.c (gtk_container_focus_tab): Get rid of custom